--- a/THANKS
+++ b/THANKS
@@ -100,6 +100,7 @@
   Henning Nielsen Lund		hnl_dk@amigaos.dk
   Howard Chu			hyc@highlandsun.com
   Ian Lance Taylor		ian@cygnus.com
+  Ingo Weinhold			ingo_weinhold@gmx.de
   Jakub Bogusz			qboosh@pld-linux.org
   Jacob Meuser			jakemsr@jakemsr.com
   James Su			james.su@gmail.com
