--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,7 @@ New in 2.2.8 2009-??-??: git version 2.2.7a, Libtool team:
   - Improved support for Atari FreeMiNT.
   - With binutils 2.19.50+, shared libraries can be built on AIX.
   - Initial support for the Cuda Compiler Driver on GNU/Linux.
+  - Support for Haiku (i586-pc-haiku).
 
 * Bug fixes:
 
