--- a/THANKS
+++ b/THANKS
@@ -145,6 +145,7 @@
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
   Rainer Tammer			tammer@tammer.net
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
+  Richard B. Kreckel		kreckel@ginac.de
   Richard Purdie		rpurdie@rpsys.net
   Richard Sandiford		richards@transitive.com
   Robert Garron			Robert.Garron@Access3000.net
