Allow gcc builds with -Wall -Werror.
* libltdl/ltdl.c (try_dlopen): Use strlen rather than LT_STRLEN on
an array that will never be NULL.

Signed-off-by: Eric Blake <ebb9@byu.net>
Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-02  Eric Blake  <ebb9@byu.net>
+
+	Allow gcc builds with -Wall -Werror.
+	* libltdl/ltdl.c (try_dlopen): Use strlen rather than LT_STRLEN on
+	an array that will never be NULL.
+
 2009-11-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix func_normal_abspath sed script for Solaris.
