--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-11-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Recognize `pgfortran' as Portland compiler.
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC, _LT_LINKER_SHLIBS):
+	Accept `pgfortran*' too.
+	Report by Jeff Squyres.
+
 2009-11-04  Alexandre Oliva  <aoliva@redhat.com>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
