--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-11-14  Peter O'Gorman  <peter@pogma.com>
+
+	Only use preopen loader to load preopened archives
+	* libltdl/ltdl.c: Limit checking of .a to preopen loader.
+	* tests/lt_dlopen_a.at: Add test.
+	* Makefile.am: Add test.
+
 2009-05-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	libtoolize: ignore trailing junk on scriptversion line.
@@ -7,7 +14,6 @@
 	Automake-provided script have a stylized comment to induce
 	Emacs to use UTC.
 	Exposed by the `libtoolize config files serial update' test.
-
 
 2008-09-07  Gary V. Vaughan  <gary@gnu.org>
 
