--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	Don't load module.la from current directory by default.
+	* libltdl/ltdl.c (try_dlopen): Do not attempt to load an
+	unqualified module.la file from the current directory (by
+	default) since doing so is insecure and is not compliant with
+	the documentation.
+	* tests/testsuite.at: Qualify access to module.la file in
+	current directory so that test passes.
+
 2009-11-14  Peter O'Gorman  <peter@pogma.com>
 
 	Only use preopen loader to load preopened archives
