--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-16  Peter O'Gorman  <peter@pogma.com>
+
+	Really update libltdl version-info.
+	* libltdl/Makefile.inc: Update version-info.
+
 2009-11-14  Peter O'Gorman  <peter@pogma.com>
 
 	Prepare for 2.2.6b release.
