--- a/THANKS
+++ b/THANKS
@@ -140,6 +140,7 @@
   Paul Biggar			paul.biggar@gmail.com
   Paul Eggert			eggert@twinsun.com
   Peter Eisentraut		peter_e@gmx.net
+  Peter Fritzsche		peter.fritzsche@gmx.de
   Peter Jeremy			peterjeremy@optushome.com.au
   Peter Kjellerstedt		peter.kjellerstedt@axis.com
   Rainer Emrich			r.emrich@de.tecosim.com
