--- a/NEWS
+++ b/NEWS
@@ -52,6 +52,7 @@ New in 2.2.8 2009-??-??: git version 2.2.7a, Libtool team:
   - Fix ancient bug where "-Wc," was turned into "$wl" (typically "-Wl,")
     when using the compiler driver to link programs. Now "-Wc," is stripped
     just as it is when linking libraries through the compiler driver.
+  - Symbol versioning works with the GNU gold linker now.
 
 * Miscellaneous changes:
 
