--- a/THANKS
+++ b/THANKS
@@ -74,6 +74,7 @@
   Andrey Slepuhin		pooh@msu.ru
   Aneesh Kumar K.V		kvaneesh@hotmail.com
   Brad Smith			brad@comstyle.com
+  Brent Leback			brent.leback@st.com
   Brian Barrett			brbarret@osl.iu.edu
   Bruno Haible			haible@ilog.fr
   Camilo La Rota		camilo.larota@ens-lyon.fr
