--- a/THANKS
+++ b/THANKS
@@ -170,6 +170,7 @@
   Tom Tromey			tromey@cygnus.com
   Tor Lillqvist			tml@iki.fi
   Ulrich Drepper		drepper@ipd.info.uni-karlsruhe.de
+  Vadim Zeitlin			vz-libtool@zeitlins.org
   Vincent Lefevre		vincent@vinc17.org
   Vincent Torri			vtorri@univ-evry.fr
   Xavier Pianet			xavier@xingo.com
