Make testsuite code C++ clean again.
* tests/resident.at (resident modules): Fix for C++.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-01-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Make testsuite code C++ clean again.
+	* tests/resident.at (resident modules): Fix for C++.
+
 2010-01-29  Peter Rosin  <peda@lysator.liu.se>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
