--- a/THANKS
+++ b/THANKS
@@ -158,6 +158,7 @@
   Roumen Petrov			bugtrack@roumenpetrov.info
   Rudolf Leitgeb		r.leitgeb@x-pin.com
   Sam Thursfield		ssssam@gmail.com
+  Scott McCreary		scottmc2@gmail.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Simon Josefsson		jas@extundo.com
   Stephan Kulow			coolo@kde.org
