Detect Sun compiler suite with 'sun'-prefixed names.
* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC, _LT_LANG_CXX_CONFIG)
(_LT_SYS_HIDDEN_LIBDEPS) [solaris]: Accept compiler names sunCC,
sunf77, sunf90, sunf95 in addition to CC, f77, f90, f95.
* NEWS: Update.
Report by Vadim Zeitlin.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/NEWS
+++ b/NEWS
@@ -65,6 +65,7 @@ New in 2.2.8 2010-??-??: git version 2.2.7a, Libtool team:
     just as it is when linking libraries through the compiler driver.
   - Symbol versioning works with the GNU gold linker now.
   - Fixes for detection of shared library dependencies on MinGW systems.
+  - Fixed Sun compiler detection on Solaris with sunCC, sunf77 etc. names.
 
 * Miscellaneous changes:
 
