--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2010-02-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Detect Sun compiler suite with 'sun'-prefixed names.
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC, _LT_LANG_CXX_CONFIG)
+	(_LT_SYS_HIDDEN_LIBDEPS) [solaris]: Accept compiler names sunCC,
+	sunf77, sunf90, sunf95 in addition to CC, f77, f90, f95.
+	* NEWS: Update.
+	Report by Vadim Zeitlin.
+
 2010-02-28  Pierre Ossman  <ossman@ossman.lkpg.cendio.se>  (tiny change)
             Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
