--- a/THANKS
+++ b/THANKS
@@ -79,6 +79,7 @@
   Bruno Haible			haible@ilog.fr
   Camilo La Rota		camilo.larota@ens-lyon.fr
   Carl D. Roth			roth@cse.ucsc.edu
+  Chris Demetriou		cgd@google.com
   Chris P. Ross			cross@eng.us.uu.net
   Christian Biesinger		cbiesinger@web.de
   Christian Rössel		christian.roessel@gmx.de
