--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Do not use @sc nor @acronym in the manual.
+	* doc/libtool.texi: Remove all usage of @sc.
+
 2010-03-19  Chris Demetriou  <cgd@google.com>
 
 	Sort output of 'find' to enable deterministic builds.
